# OTUS-HW-6

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: matrix.hpp
src/: main.cpp
test/src/: test.cpp
